add method to api to receive local dir structure of vdisk replicas (#109)
* add method to api to receive local dir structure of vdisk replicas

* fix clippy warnings in dcr

* code refactoring

* rustfmt
